--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+v0.0.3	2011-12-19	Lorenz Schori <lo+xmlshim@znerol.ch>
+	- Upgrade to libxmljs/xmlwriter-0.4.3
+
 v0.0.2	2011-12-07	Lorenz Schori <lo+xmlshim@znerol.ch>
 	- Fix parsing of text nodes followed by elements
 	- Add MIT lisence text
